--- a/GSKC.Web/packages.config
+++ b/GSKC.Web/packages.config
@@ -4,9 +4,12 @@
   <package id="bootstrap" version="3.2.0" targetFramework="net40" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net40" />
   <package id="jQuery" version="1.9.0" targetFramework="net40" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="1.4.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net40" />
   <package id="Knockout.Mapping" version="2.4.0" targetFramework="net40" />
+  <package id="knockout.mapping.TypeScript.DefinitelyTyped" version="0.1.2" targetFramework="net40" />
+  <package id="knockout.TypeScript.DefinitelyTyped" version="0.6.7" targetFramework="net40" />
   <package id="knockoutjs" version="3.2.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net40" />
@@ -30,6 +33,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="RequireJS" version="2.1.15" targetFramework="net40" />
   <package id="SimpleInjector" version="2.5.2" targetFramework="net40" />
   <package id="SimpleInjector.Integration.Web" version="2.5.2" targetFramework="net40" />
   <package id="SimpleInjector.Integration.Web.Mvc" version="2.5.2" targetFramework="net40" />
