--- a/GSKC.EF/GSKC.EF.csproj
+++ b/GSKC.EF/GSKC.EF.csproj
@@ -68,10 +68,19 @@
     <Compile Include="Manufacturer.cs">
       <DependentUpon>GSKCModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Product.cs">
+      <DependentUpon>GSKCModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="ProductCategory.cs">
       <DependentUpon>GSKCModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ProductSection.cs">
+      <DependentUpon>GSKCModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Supplier.cs">
+      <DependentUpon>GSKCModel.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
