--- a/GSKC.Web/GSKC.Web.csproj
+++ b/GSKC.Web/GSKC.Web.csproj
@@ -182,9 +182,12 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Areas\Calendar\CalendarAreaRegistration.cs" />
+    <Compile Include="Areas\Calendar\Controllers\HomeController.cs" />
     <Compile Include="Areas\Contact\ContactAreaRegistration.cs" />
     <Compile Include="Areas\Contact\Controllers\HomeController.cs" />
     <Compile Include="Areas\FeaturedProducts\Controllers\FeaturedController.cs" />
+    <Compile Include="Areas\FeaturedProducts\Models\FeaturedProductsBaseViewModel.cs" />
     <Compile Include="Areas\HelpPage\ApiDescriptionExtensions.cs" />
     <Compile Include="Areas\HelpPage\App_Start\HelpPageConfig.cs" />
     <Compile Include="Areas\HelpPage\Controllers\HelpController.cs" />
@@ -478,12 +481,15 @@
     <Content Include="Areas\Support\Views\Shared\Index.cshtml" />
     <Content Include="Areas\Contact\Views\Web.config" />
     <Content Include="Areas\Contact\Views\Shared\Index.cshtml" />
+    <Content Include="Areas\Calendar\Views\Web.config" />
+    <Content Include="Areas\Calendar\Views\Shared\Index.cshtml" />
     <None Include="Properties\PublishProfiles\gskc - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\gskc - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.9.0.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\config.js" />
+    <Content Include="Scripts\ios-orientationchange-fix.js" />
     <Content Include="Scripts\jquery-1.9.0.js" />
     <Content Include="Scripts\jquery-1.9.0.min.js" />
     <Content Include="Scripts\jquery-1.9.0.min.map" />
@@ -528,7 +534,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index_default.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery.validate.min.js.map">
       <DependentUpon>jquery.validate.min.js</DependentUpon>
     </Content>
@@ -537,11 +542,14 @@
     </Content>
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_Layout_default.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml">
+      <SubType>Code</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Calendar\Models\" />
     <Folder Include="Areas\Contact\Models\" />
-    <Folder Include="Areas\FeaturedProducts\Models\" />
     <Folder Include="Areas\FeaturedProducts\Views\Shared\" />
     <Folder Include="Areas\Support\Models\" />
     <Folder Include="Models\" />
@@ -564,7 +572,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="Areas\Calendar\App\Calendar.ts" />
+    <TypeScriptCompile Include="Scripts\common.ts" />
     <TypeScriptCompile Include="Areas\ProductSearch\App\ProductSearch.ts" />
+    <TypeScriptCompile Include="Scripts\knockout.custom.bindings.ts" />
+    <TypeScriptCompile Include="Scripts\modules.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\jquery\jquery.tmpl.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\jquery\jquery.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\knockout.mapping\knockout.mapping.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\knockout\knockout.d.ts" />
