--- a/GSKC.Web/packages.config
+++ b/GSKC.Web/packages.config
@@ -3,10 +3,12 @@
   <package id="AutoMapper" version="3.2.1" targetFramework="net40" />
   <package id="bootstrap" version="3.2.0" targetFramework="net40" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net40" />
+  <package id="gapi.TypeScript.DefinitelyTyped" version="0.1.0" targetFramework="net40" />
   <package id="jQuery" version="1.9.0" targetFramework="net40" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="1.4.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net40" />
+  <package id="jqueryui.TypeScript.DefinitelyTyped" version="0.3.6" targetFramework="net40" />
   <package id="Knockout.Mapping" version="2.4.0" targetFramework="net40" />
   <package id="knockout.mapping.TypeScript.DefinitelyTyped" version="0.1.2" targetFramework="net40" />
   <package id="knockout.TypeScript.DefinitelyTyped" version="0.6.7" targetFramework="net40" />
